--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "BASE_URL", '"https://gateway.marvel.com:443/"'
+        buildConfigField "String", "API_KEY", '"5cf997d2330499adc7591b5bf49cfb4c"'
+        buildConfigField "String", "PRIVATE_KEY", '"c215e78bcfe162d6617fc64eef533cdcac374c7b"'
         buildConfigField "int", "READ_TIMEOUT", "30"
         buildConfigField "int", "WRITE_TIMEOUT", "30"
         buildConfigField "int", "CONNECTION_TIMEOUT", "10"
@@ -53,6 +55,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //Lifecycle
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
+
     //Hilt
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
@@ -66,5 +73,9 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp-urlconnection:4.9.1"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
     implementation "com.google.code.gson:gson:2.9.0"
+
+    //Navigation component
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.2"
 
 }
