--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,9 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
+    //ROOM
+    implementation "androidx.room:room-runtime:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
+    implementation "androidx.room:room-ktx:2.5.2"
+
 }
